<resources>
    <string name="app_name">TFG</string>
    <string name="blue_logo_description">Descripción del logotipo azul</string>
    <string name="white_logo_description">Descripción del logotipo blanco</string>
    <string name="roundBack_desc">RoundBack</string>
    <string name="btnInicio_desc">Inicio</string>
    <string name="btnCar_desc">Vehículos</string>
    <string name="btnShop_desc">Tienda</string>
    <string name="btnProfile_desc">Perfil</string>
    <string name="btnAddCar_desc">Nuevo coche</string>
    <string name="pathpilot">PathPilot</string>
    <string name="nuestras_recomendaciones">Nuestras recomendaciones</string>
    <string name="img">img</string>
    <string name="item">item</string>
    <string name="v_en_tu_ciudad">Vehículos en tu ciudad</string>
    <string name="articulos_destacados">Artículos destacados</string>
    <string name="acerca_de">Acerca de</string>
    <string name="version_de_la_aplicacion">Versión de la aplicación</string>
    <string name="version_info">Versión 1.1, actualmente en desarrollo</string>
    <string name="desarrollado_por">Desarrollado por</string>
    <string name="desarrollador">Esteban Bernal Martínez, alumno de 2º de  Desarrollo de Aplicaciones Multiplataforma del turno Vespertino en I.E.S Comercio</string>
    <string name="Siguenos_en">Síguenos en nuestras redes sociales.</string>
    <string name="Siguenos">Síguenos</string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="sguenos_en_nuestro_twitter">¡Síguenos en nuestro Twitter!</string>
    <string name="siguenos_ahora">Síguenos ahora</string>
    <string name="siguenos_en_twitter_para_no_perderte_ninguna_actualizacion_noticias_y_mas">Síguenos en Twitter para no perderte ninguna actualización, noticias y más</string>
    <string name="siguenos_descrip">¡Mantente al día con nuestras últimas novedades! Síguenos en nuestras redes sociales para actualizaciones, ofertas y contenido exclusivo.</string>
    <string name="acerca_de_settings">Conócenos más personalmente.</string>
    <string name="contactanos">Contáctanos</string>
    <string name="estamos_aqui">Estamos aquí para ayudarte.</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="gestiona_notificaciones">Gestiona tus notificaciones aquí.</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="pulsa_cerrar_sesion">Pulsa aquí para cerrar sesión.</string>
    <string name="configuracion">Configuración</string>
    <string name="c_mo_podemos_ayudarte">¿Cómo podemos ayudarte?</string>
    <string name="introduce_tu_asunto">Introduce tu asunto</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="introduce_tu_mensaje">Introduce tu mensaje</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="tipo">Tipo</string>
    <string name="caballos">Caballos</string>
    <string name="ubicacion">Ubicación</string>
    <string name="precio">Precio</string>
    <string name="dejanos_tu_mensaje">Déjanos tu mensaje.</string>
    <string name="cancelar">Cancelar</string>
    <string name="informacion_articulo">Información de artículo</string>
    <string name="informacion">Información</string>
    <string name="volver_a_inicio">Volver al inicio</string>
    <string name="tema">Tema</string>
    <string name="accesibilidad">Accesibilidad</string>
    <string name="contrasena">Contraseña</string>
    <string name="articulos">Artículos</string>
    <string name="aplicar">Aplicar</string>
    <string name="cambia_el_tema">Cambia el tema de la apliación</string>
    <string name="desc_tema_oscuro">Activa el modo oscuro para reducir la fatiga ocular y mejorar la legibilidad en entornos con poca luz.</string>
    <string name="brillo_automatico">Ajusta automáticamente el brillo de la pantalla según la luz ambiental para una mejor visibilidad y comodidad ocular.</string>
    <string name="conf_notificaciones">Cambia aquí las notificaciones</string>
    <string name="gestiona_notificaciones_long">Gestiona las notificaciones promocionales que deseas recibir de nuestra parte para una experiencia personalizada.</string>
    <string name="resultados">Resultados</string>
    <string name="resultados_busqueda">Resultados búsqueda</string>
    <string name="login">Login</string>
    <string name="tus_coches">Tus coches</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="mantenimientos">Mantenimientos</string>
    <string name="alquileres">Alquileres</string>
    <string name="taller">Taller</string>
    <string name="selecciona_coche">Selecciona el coche</string>
    <string name="introduce_taller">Introduce el taller</string>
    <string name="selecciona_fecha">Selecciona la fecha</string>
    <string name="introduce_tipo">Introduce el tipo</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="todos_los_coches">Todos los coches</string>
    <string name="buscador_todos_los_coches">Búsqueda para todos los coches</string>
    <string name="pulsa_aqui_perfil">Pulsa aqui para gestionar tu perfil</string>
    <string name="guardar">Guardar</string>
    <string name="coche">Coche</string>
    <string name="fecha">Fecha</string>
    <string name="coches">Coches</string>
    <string name="gestionar_usuario">Gestionar usuario</string>
    <string name="aplicar_cambios">Aplicar cambios</string>
    <string name="gestionar_usuario_aqui">Cambia aquí tu información de usuario</string>
    <string name="borrar_cuenta">Borrar cuenta</string>

</resources>